# tau800

./: .gitignore  api.md  ars_description.txt  ars_script.txt  langspec.md  video.txt
backend/: .gitignore  Cargo.toml  package-lock.json  package.json
backend/src/: lib.rs  program.asm
backend/src/emu/: assembler.rs  instruction.rs  interpreter.rs  machine.rs  main.rs  mod.rs  modules.rs  prelude.rs  state.rs  universe.rs  word.rs
electron/: assets  css  main.html  package-lock.json  package.json  webpack.config.js
electron/css/: styles.css  styles.css.map  styles.sass
electron/src/: main.js
electron/src/backend/: main.js  preload.js
electron/src/bundled/: live.bundle.js
electron/src/live/: live.js  registers.js  renderer.js
final/: README.md
interpreter/: Cargo.toml
interpreter/examples/: aoc22_1.asm  aoc22_1_input.py  bubble_time.asm  display.asm  display.asm.template  dotproduct2.asm  lib.asm  newton-1.asm  newton-time.asm  page_file.asm  primes.asm  process_separators.sh  run_asm.sh  time1.asm  time2.asm  time3.asm
interpreter/src/: assembler.rs  basics.rs  cpu_state.rs  dotproduct.asm  instruction.rs  instruction.rs.old  interpreter.rs  machine.rs  machine_state.rs  main.rs  modules.rs  prelude.rs  preprocess_asm.py  ram_state.rs  simple.asm  state.rs  universe.rs  word.rs
live_mockup/: main.html  register.html
live_mockup/css/: styles.css  styles.css.map  styles.sass
manual/: compile.sh  document.tex  tikz.tex  unicode.tex
