[package]
name = "anachronic"
version = "1.0.0"
authors = ["Miguel Murça, André Duarte"]
license = "UNLICENSED"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "~0.1.2"
rand = "~0.8.4"
chrono = "~0.4.19"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
